--- a/computer-vision-neural-networks.ipynb
+++ b/computer-vision-neural-networks.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import urllib\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from PIL import Image, ImageFont, ImageDraw\n",
     "from IPython import display\n",
     "import time\n",
@@ -16,17 +18,88 @@
     "print(\"Opencv version: \"+cv2.__version__)\n",
     "import torch\n",
     "print(\"Torch version: \"+torch.__version__)\n",
-    "import torchvision\n",
-    "print(\"Torchvision version: \"+torchvision.__version__)"
+    "#import torchvision\n",
+    "#print(\"Torchvision version: \"+torchvision.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url, filename = (\"https://upload.wikimedia.org/wikipedia/commons/f/f6/View_of_Valdivia_from_Pedro_de_Valdivia_bridge.jpg\", \"asd.jpg\")\n",
+    "urllib.request.urlretrieve(url, filename)\n",
+    "img = Image.open('asd.jpg')\n",
+    "!rm asd.jpg\n",
+    "display.display(img)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Localización y clasificación de entidades en una imagen\n",
+    "# Procesamiento de imágenes digitales\n",
     "\n",
-    "Descargamos una imagen cualquier de internet"
+    "Una imagen está compuesta de píxeles\n",
+    "\n",
+    "Cada píxel nos da información de color en una cierto lugar de la imagen\n",
+    "\n",
+    "El color está codificado como tres números: RGB\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.array(img)[200:300, 50:250, :]\n",
+    "display.display(Image.fromarray(np.uint8(255*plt.cm.Reds_r(data[:, :, 0]))))\n",
+    "display.display(Image.fromarray(np.uint8(255*plt.cm.Greens_r(data[:, :, 1]))))\n",
+    "display.display(Image.fromarray(np.uint8(255*plt.cm.Blues_r(data[:, :, 2]))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los computadores ven las imagenes como arreglos de números"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[:, :, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos operar estos arreglos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hacer una convolución aquí!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Localización y clasificación de entidades en una imagen\n",
+    "\n",
+    "Descargamos una imagen \"cualquiera\" de internet"
    ]
   },
   {
@@ -55,7 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label2name = {1: 'persona', 2: 'bicicleta', 3: 'auto', 4: 'moto', 8: 'camioneta', 18: 'perro'}\n",
+    "label2name = {1: 'persona', 2: 'bicicleta', 3: 'auto', 4: 'moto', \n",
+    "              8: 'camioneta', 18: 'perro'}\n",
     "\n",
     "from torchvision.models.detection import fasterrcnn_resnet50_fpn\n",
     "# Descargo un modelo detector pre-entrenado\n",
@@ -113,6 +187,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Localización y clasificación de entidades en un video\n",
+    "\n",
+    "Podemos realizar el mismo procedimiento en cada uno de los cuadros de un video"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -147,11 +230,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# [Redes Neuronales](https://docs.google.com/presentation/d/16lErEZ2VBt8a-K4lrgdmvaaTOma5sDXvW5fUbLS6qWE/edit#slide=id.g33ee194b7d_0_889)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# http://thispersondoesnotexist.com"
+   ]
   }
  ],
  "metadata": {
