--- a/computer-vision-neural-networks.ipynb
+++ b/computer-vision-neural-networks.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import urllib\n",
     "import numpy as np\n",
+    "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image, ImageFont, ImageDraw\n",
     "from IPython import display\n",
@@ -55,10 +56,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.colors import LinearSegmentedColormap\n",
     "data = np.array(img)[200:300, 50:250, :]\n",
-    "display.display(Image.fromarray(np.uint8(255*plt.cm.Reds_r(data[:, :, 0]))))\n",
-    "display.display(Image.fromarray(np.uint8(255*plt.cm.Greens_r(data[:, :, 1]))))\n",
-    "display.display(Image.fromarray(np.uint8(255*plt.cm.Blues_r(data[:, :, 2]))))"
+    "fig, ax = plt.subplots(1, 3, figsize=(9, 2), tight_layout=True)\n",
+    "for k in range(3):\n",
+    "    b = np.zeros((3, ))\n",
+    "    b[k] = 1\n",
+    "    custom_cmap = LinearSegmentedColormap.from_list('custom_cmap', [(0, 0, 0), b], N=100)\n",
+    "    ax[k].imshow(data[:, :, k], cmap=custom_cmap)\n",
+    "    ax[k].axis('off')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_bw = 0.2989*data[:, :, 0] + 0.587*data[:, :, 1]+ 0.114*data[:, :, 2]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, figsize=(9, 2), tight_layout=True)\n",
+    "ax.imshow(img_bw, cmap=plt.cm.Greys_r)\n",
+    "ax.axis('off');"
    ]
   },
   {
@@ -74,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[:, :, 0]"
+    "img_bw "
    ]
   },
   {
@@ -90,7 +109,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hacer una convolución aquí!"
+    "D = 3\n",
+    "filt = np.zeros(shape=(D, D))\n",
+    "filt[1:-1, 1:-1] = 1\n",
+    "display(filt)\n",
+    "img_res = scipy.signal.correlate2d(data.astype('float32'), filt/np.sum(filt), mode='valid')\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(8, 3), tight_layout=True)\n",
+    "ax[0].imshow(subimg, cmap=plt.cm.Greys_r)\n",
+    "ax[1].imshow(filt, cmap=plt.cm.Greys_r)\n",
+    "ax[2].imshow(img_res, cmap=plt.cm.Greys_r);"
    ]
   },
   {
