--- a/computer-vision-neural-networks.ipynb
+++ b/computer-vision-neural-networks.ipynb
@@ -8,8 +8,10 @@
    "source": [
     "import urllib\n",
     "import numpy as np\n",
+    "import scipy.signal\n",
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib import animation, patches\n",
     "from PIL import Image, ImageFont, ImageDraw\n",
     "from IPython import display\n",
     "import time\n",
@@ -19,8 +21,8 @@
     "print(\"Opencv version: \"+cv2.__version__)\n",
     "import torch\n",
     "print(\"Torch version: \"+torch.__version__)\n",
-    "#import torchvision\n",
-    "#print(\"Torchvision version: \"+torchvision.__version__)"
+    "import torchvision\n",
+    "print(\"Torchvision version: \"+torchvision.__version__)"
    ]
   },
   {
@@ -57,11 +59,10 @@
    "outputs": [],
    "source": [
     "from matplotlib.colors import LinearSegmentedColormap\n",
-    "data = np.array(img)[200:300, 50:250, :]\n",
+    "data = np.array(img)[70:140, 50:250, :]\n",
     "fig, ax = plt.subplots(1, 3, figsize=(9, 2), tight_layout=True)\n",
     "for k in range(3):\n",
-    "    b = np.zeros((3, ))\n",
-    "    b[k] = 1\n",
+    "    b = np.zeros((3, )); b[k] = 1\n",
     "    custom_cmap = LinearSegmentedColormap.from_list('custom_cmap', [(0, 0, 0), b], N=100)\n",
     "    ax[k].imshow(data[:, :, k], cmap=custom_cmap)\n",
     "    ax[k].axis('off')"
@@ -74,7 +75,6 @@
    "outputs": [],
    "source": [
     "img_bw = 0.2989*data[:, :, 0] + 0.587*data[:, :, 1]+ 0.114*data[:, :, 2]\n",
-    "\n",
     "fig, ax = plt.subplots(1, figsize=(9, 2), tight_layout=True)\n",
     "ax.imshow(img_bw, cmap=plt.cm.Greys_r)\n",
     "ax.axis('off');"
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos operar estos arreglos"
+    "Podemos operar estos arreglos usando convolución"
    ]
   },
   {
@@ -109,16 +109,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "D = 3\n",
+    "subimg = (img_bw.astype('float32')/255).copy()\n",
+    "D = 7\n",
     "filt = np.zeros(shape=(D, D))\n",
     "filt[1:-1, 1:-1] = 1\n",
-    "display(filt)\n",
-    "img_res = scipy.signal.correlate2d(data.astype('float32'), filt/np.sum(filt), mode='valid')\n",
+    "display.display(filt)\n",
+    "img_res = scipy.signal.correlate2d(subimg, filt/np.sum(filt), mode='valid')\n",
     "\n",
-    "fig, ax = plt.subplots(1, 3, figsize=(8, 3), tight_layout=True)\n",
+    "fig, ax = plt.subplots(2, 1, figsize=(8, 5), tight_layout=True)\n",
     "ax[0].imshow(subimg, cmap=plt.cm.Greys_r)\n",
-    "ax[1].imshow(filt, cmap=plt.cm.Greys_r)\n",
-    "ax[2].imshow(img_res, cmap=plt.cm.Greys_r);"
+    "patch = patches.Rectangle((0, 0), D, D, fc='y')\n",
+    "ax[0].add_patch(patch)\n",
+    "ax[0].axis('off'); ax[0].set_title('Imagen original')\n",
+    "tmp = np.zeros_like(img_res)\n",
+    "img_ = ax[1].imshow(tmp, cmap=plt.cm.Greys_r, \n",
+    "                    vmin=np.amin(img_res), vmax=np.amax(img_res))\n",
+    "ax[1].axis('off'); ax[1].set_title('Imagen filtrada')\n",
+    "\n",
+    "def update_fig(k):\n",
+    "    global tmp\n",
+    "    idx = np.unravel_index(k, img_res.shape)\n",
+    "    tmp[idx[0], idx[1]] = img_res[idx[0], idx[1]]\n",
+    "    patch.set_xy([idx[1], idx[0]])\n",
+    "    img_.set_data(tmp)\n",
+    "      \n",
+    "animation.FuncAnimation(fig, update_fig, np.prod(img_res.shape), interval=1, repeat=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filt = np.ones(shape=(5, 2))\n",
+    "filt[:, 1] = -1\n",
+    "display.display(filt)\n",
+    "img_res = scipy.signal.correlate2d(subimg, filt - np.mean(filt), mode='valid')\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 1, figsize=(8, 5), tight_layout=True)\n",
+    "ax[0].imshow(subimg, cmap=plt.cm.Greys_r)\n",
+    "patch = patches.Rectangle((0, 0), D, D, fc='y')\n",
+    "ax[0].add_patch(patch)\n",
+    "ax[0].axis('off')\n",
+    "tmp = np.zeros_like(img_res)\n",
+    "img_ = ax[1].imshow(tmp, cmap=plt.cm.Greys_r, \n",
+    "                    vmin=np.amin(img_res), vmax=np.amax(img_res))\n",
+    "ax[1].axis('off')\n",
+    "\n",
+    "def update_fig(k):\n",
+    "    global tmp\n",
+    "    idx = np.unravel_index(k, img_res.shape)\n",
+    "    tmp[idx[0], idx[1]] = img_res[idx[0], idx[1]]\n",
+    "    patch.set_xy([idx[1], idx[0]])\n",
+    "    img_.set_data(tmp)\n",
+    "      \n",
+    "animation.FuncAnimation(fig, update_fig, np.prod(img_res.shape), interval=1, repeat=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El filtro realza ciertos aspectos de la imagen original\n",
+    "\n",
+    "Esto queda reflejado en la imagen filtrada\n",
+    "\n",
+    "¿A que corresponde este filtro?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filt = subimg[10:30, 10:25].copy()\n",
+    "img_res = scipy.signal.correlate2d(subimg, filt - np.mean(filt), mode='same')\n",
+    "idx = np.unravel_index(np.argmax(img_res.ravel()), img_res.shape)\n",
+    "print(idx)\n",
+    "fig, ax = plt.subplots(2, 1, figsize=(8, 5), tight_layout=True)\n",
+    "ax[0].imshow(subimg, cmap=plt.cm.Greys_r)\n",
+    "ax[0].axis('off')\n",
+    "ax[0].scatter(idx[1], idx[0], c='r')\n",
+    "#subimg2 = subimg.copy()\n",
+    "#subimg2[] =np.abs(img_res)\n",
+    "ax[1].imshow(np.abs(img_res), cmap=plt.cm.Reds)\n",
+    "ax[1].axis('off');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(1, 2))\n",
+    "plt.imshow(filt, cmap=plt.cm.Greys_r)\n",
+    "plt.gca().axis('off');"
    ]
   },
   {
